# manifest

./: Cargo.toml  Certora_README.md  README.md  package.json
.github/workflows/: ci-balance-checker.yml  ci-benchmark.yml  ci-code-review-rust.yml  ci-code-review-ts.yml  ci-trade-verification.yml
audits/: updates.md
certora/CI_tests/rule_cancel_global_order_ask/: rule_cancel_global_order_ask.conf
certora/CI_tests/rule_cancel_global_order_bid/: rule_cancel_global_order_bid.conf
certora/CI_tests/rule_cancel_global_order_gas_refund_ask/: rule_cancel_global_order_gas_refund_ask.conf
certora/CI_tests/rule_cancel_global_order_gas_refund_bid/: rule_cancel_global_order_gas_refund_bid.conf
certora/CI_tests/rule_cancel_global_order_no_revert_ask/: rule_cancel_global_order_no_revert_ask.conf
certora/CI_tests/rule_cancel_global_order_no_revert_bid/: rule_cancel_global_order_no_revert_bid.conf
certora/CI_tests/rule_claim_seat_writes_trader_pubkey/: rule_claim_seat_writes_trader_pubkey.conf
certora/CI_tests/rule_global_deposit/: rule_global_deposit.conf
certora/CI_tests/rule_global_deposit_no_revert/: rule_global_deposit_no_revert.conf
certora/CI_tests/rule_global_evict/: rule_global_evict.conf
certora/CI_tests/rule_global_gas_prepayment/: rule_global_gas_prepayment.conf
certora/CI_tests/rule_global_taker_cannot_take_ask/: rule_global_taker_cannot_take_ask.conf
certora/CI_tests/rule_global_taker_cannot_take_bid/: rule_global_taker_cannot_take_bid.conf
certora/CI_tests/rule_global_withdraw/: rule_global_withdraw.conf
certora/CI_tests/rule_global_withdraw_no_revert/: rule_global_withdraw_no_revert.conf
certora/CI_tests/rule_immediate_or_cancel_no_funds_loss_ask/: rule_immediate_or_cancel_no_funds_loss_ask.conf
certora/CI_tests/rule_immediate_or_cancel_no_funds_loss_bid/: rule_immediate_or_cancel_no_funds_loss_bid.conf
certora/CI_tests/rule_place_single_order_global_full_match_ask/: rule_place_single_order_global_full_match_ask.conf
certora/CI_tests/rule_place_single_order_global_full_match_bid/: rule_place_single_order_global_full_match_bid.conf
certora/CI_tests/rule_place_single_order_global_no_revert_ask/: rule_place_single_order_global_no_revert_ask.conf
client/okx/: Cargo.toml
client/okx/src/: lib.rs  mfx.rs
client/rust/jup/: Cargo.toml
client/rust/jup/src/: lib.rs
client/rust/slim/: Cargo.toml  README.md
client/rust/slim/src/: constants.rs  events.rs  instruction.rs  lib.rs  state.rs  tests.rs
debug-ui/scripts/: balance-checker.ts  start-fill-feed.ts  stats-server.ts  verify-trades.ts
lib/: Cargo.toml
programs/manifest/: Cargo.toml
programs/ui-wrapper/: Cargo.toml
programs/wrapper/: Cargo.toml
scripts/: backfill-tickers.ts  balance-checker.ts  cancel-reverse.ts  check-extensions.ts  collect-wrapper-fees.ts  liquidity-monitoring.ts  orderbook-snapshots.ts  run-rando-bot.ts  start-fill-feed.ts  stats-server.ts  update-alts.ts  verify-trades.ts  view-market.ts
scripts/stats_utils/: backfill.ts  constants.ts  manifestStatsServer.ts  marketFetcher.ts  marketMakerMonitor.ts  pnl.ts  tvlMonitor.ts  types.ts  utils.ts  volumeMonitor.ts
skills/manifest/: SKILL.md
(+122 files in other folders)
